add jest in project
add jest in project

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ NODE_ENV=local
 PORT=3000
 HOST=localhost
 HOST_URL=http://localhost:3000
+
+#geocode API
+
+GEOCODE_URL=https://api.opencagedata.com/geocode/v1/json
+GEOCODE_KEY=9869467e1cf64dd0a61aaa2a2e1ee042
