--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "morgan": "~1.9.1"
     },
     "devDependencies": {
-        "jest": "^27.2.2",
-        "supertest": "^6.1.6"
+        "@types/jest": "^25.1.3",
+        "jest": "^25.1.0",
+        "supertest": "^4.0.2"
     }
 }
